@@ -401,6 +401,9 @@ AT_DATA([prog.cob], [
            MOVE FIELDO (4)        TO FIELDO (NUMVAR)
            MOVE FIELDO (NUMVAR)   TO FIELDO (4)
            MOVE FIELDO (NUMVAR)   TO FIELDO (NUMVAR)
+           MOVE FIELDO (NUMVAR) (1:1) TO FIELDO (NUMVAR) (2:1)
+           MOVE FIELDO (NUMVAR) (2:1) TO FIELDO (NUMVAR)
+           MOVE FIELDO (4) (2:1)  TO FIELDO (CONST4)
            STOP RUN.
 ])
 
@@ -413,6 +416,13 @@ prog.cob:25: warning: overlapping MOVE may produce unpredictable results
 prog.cob:26: warning: overlapping MOVE may produce unpredictable results
 prog.cob:32: warning: overlapping MOVE may produce unpredictable results
 prog.cob:34: warning: overlapping MOVE may produce unpredictable results
+prog.cob:39: warning: overlapping MOVE may produce unpredictable results
+prog.cob:40: warning: overlapping MOVE may produce unpredictable results
+prog.cob:42: warning: overlapping MOVE may produce unpredictable results
+prog.cob:43: warning: overlapping MOVE may produce unpredictable results
+prog.cob:46: warning: overlapping MOVE may produce unpredictable results
+prog.cob:48: warning: overlapping MOVE may produce unpredictable results
+prog.cob:49: warning: overlapping MOVE may produce unpredictable results
 ])
 
 AT_CHECK([$COMPILE -Wpossible-overlap prog.cob], [0], [], 
@@ -426,10 +436,17 @@ prog.cob:30: warning: overlapping MOVE may occur and produce unpredictable resul
 prog.cob:31: warning: overlapping MOVE may occur and produce unpredictable results
 prog.cob:32: warning: overlapping MOVE may produce unpredictable results
 prog.cob:34: warning: overlapping MOVE may produce unpredictable results
+prog.cob:39: warning: overlapping MOVE may produce unpredictable results
+prog.cob:40: warning: overlapping MOVE may produce unpredictable results
+prog.cob:42: warning: overlapping MOVE may produce unpredictable results
+prog.cob:43: warning: overlapping MOVE may produce unpredictable results
+prog.cob:46: warning: overlapping MOVE may produce unpredictable results
+prog.cob:48: warning: overlapping MOVE may produce unpredictable results
+prog.cob:49: warning: overlapping MOVE may produce unpredictable results
 ])
 # special case: for GnuCOBOL the result is predictable,
-# therefore test we have the expected result
-AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [], [])
+# therefore maybe test in run_misc we have the expected result
+# AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [], [])
 
 AT_CLEANUP
 
